# explain-analyze-agent

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  workflow-template.yml
.github/workflows/: ci.yml  sql-review.yml
docs/superpowers/plans/: 2026-03-23-sql-review-action.md
docs/superpowers/specs/: 2026-03-23-sql-review-action-design.md
sql_reviewer/: __init__.py  __main__.py  analyzer.py  commenter.py  config.py  diff_parser.py  explainer.py  main.py  sql_extractor.py
tests/: conftest.py  test_analyzer.py  test_commenter.py  test_config.py  test_diff_parser.py  test_explainer.py  test_main.py  test_sql_extractor.py
tests/fixtures/: .sql-reviewer.yml  sample_schema.sql
