[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-reviewer"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "psycopg2-binary>=2.9",
    "anthropic>=0.25",
    "httpx>=0.27",
    "sqlglot>=23",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "pytest-cov>=4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sql_reviewer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["sql_reviewer"]
omit = ["*/test_*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
